Updating both reports with corrections.

--- a/RAL/RAL_technical_report/refs.bib
+++ b/RAL/RAL_technical_report/refs.bib
@@ -213,6 +213,17 @@
   publisher={Elsevier}
 }
 
+@article{mayers2012vesuvio,
+  title={The VESUVIO electron volt neutron spectrometer},
+  author={Mayers, J and Reiter, G},
+  journal={Measurement Science and Technology},
+  volume={23},
+  number={4},
+  pages={045902},
+  year={2012},
+  publisher={IOP Publishing}
+}
+
 @techreport{mayers2010user,
   title={User guide to VESUVIO data analysis},
   author={Mayers, J.},
@@ -265,4 +276,71 @@
   pages={47--56},
   year={2011},
   publisher={Elsevier}
+}
+
+@article{mayers2002multiple,
+  title={Multiple scattering in deep inelastic neutron scattering: Monte Carlo simulations and experiments at the ISIS eVS inverse geometry spectrometer},
+  author={Mayers, J and Fielding, AL and Senesi, R},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={481},
+  number={1},
+  pages={454--463},
+  year={2002},
+  publisher={North-Holland}
+}
+
+@article{mayers2011calculation,
+  title={Calculation of background effects on the VESUVIO eV neutron spectrometer},
+  author={Mayers, J},
+  journal={Measurement Science and Technology},
+  volume={22},
+  number={1},
+  pages={015903},
+  year={2011},
+  publisher={IOP Publishing}
+}
+
+@techreport{penfold1986isis,
+  title={The ISIS time focussed crystal analyser spectrometer, TFXA},
+  author={Penfold, J and Tomkinson, J},
+  year={1986},
+  institution={Rutherford Appleton Lab., Chilton (UK)}
+}
+
+@article{parker1997tosca,
+  title={TOSCA: a world class inelastic neutron spectrometer},
+  author={Parker, SF and Carlile, CJ and Pike, T and Tomkinson, J and Newport, RJ and Andreani, C and Ricci, FP and Sacchetti, F and Zoppi, M},
+  journal={Physica B: Condensed Matter},
+  volume={241},
+  pages={154--156},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@article{colognesi2002tosca,
+  title={TOSCA neutron spectrometer: the final configuration},
+  author={Colognesi, D and Celli, M and Cilloco, F and Newport, RJ and Parker, SF and Rossi-Albertini, V and Sacchetti, F and Tomkinson, J and Zoppi, M},
+  journal={Applied Physics A},
+  volume={74},
+  number={1},
+  pages={s64--s66},
+  year={2002},
+  publisher={Springer}
+}
+
+@article{bowden2000tosca,
+  title={The TOSCA incoherent inelastic neutron spectrometer: progress and results},
+  author={Bowden, ZA and Celli, M and Cilloco, F and Colognesi, D and Newport, Robert J and Parker, SF and Ricci, FP and Rossi-Albertini, V and Sacchetti, F and Tomkinson, J and others},
+  journal={Physica B: Condensed Matter},
+  volume={276},
+  pages={98--99},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@unpublished{jackson2014vesuvio,
+	author	= "S. Jackson",
+	title	= "VESUVIO Data Reduction and Analysis in Mantid",
+	year	= "2014",
+	note	= "Unpublished report. Draft pending submission",
 }
